--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body {
     background-color: #fff;
 	font-size: 16px;
     line-height: 1.6em;
+    position: relative;
 }
 
 html {
@@ -776,7 +777,23 @@ hr.bold {
 	font-size: 24px;
 }
 
+/* ===========================
+--- Gallery
+============================ */
 
+.main
+{
+  position: relative;
+}
+.comment{
+  position: absolute;
+   right: 0;
+   padding-left: 30%;
+   top: 0;
+   padding-top: 15%;
+   width: 60%;
+   text-align: center;
+}
 /* ===========================
 --- Works
 ============================ */
