--- a/css/style.css
+++ b/css/style.css
@@ -781,7 +781,9 @@ hr.bold {
 --- Gallery
 ============================ */
 
-
+.main
+{
+  position: relative;
 }
 .comment{
   position: absolute;
